# NewsPoPo_Line

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
src/: manage.py
src/LineBot/: apps.py  urls.py  views.py
src/NewsPoPo/: asgi.py  settings.py  urls.py  wsgi.py
