[tool.poetry]
name = "newspopo"
version = "0.1.0"
description = ""
authors = ["kuanwen-C <128893625+kuanwen-C@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
